# fastapi_project

./: .env  .gitignore  README.md  pyproject.toml
app/: init_db.py  main.py
app/api/: dependencies.py
app/api/v1/endpoints/: auth.py  example.py  nlp.py  permission.py  role.py  user.py
app/core/: config.py  security.py
app/db/: base.py  crud.py  database.py  session.py
app/models/: __init__.py  example.py  models.py  permission.py  role.py  user.py
app/routers/: __init__.py  auth.py  example.py
app/schemas/: example.py  permission.py  query.py  role.py  token.py  user.py
app/services/: auth.py  example.py  example_service.py  nlp.py  permission.py  role.py  user.py
app/utils/: authorizations.py  query_tool.py
tests/: conftest.py  test_auth.py  test_example.py  test_user.py
